--- a/package.json
+++ b/package.json
@@ -1,28 +1,19 @@
 {
-  "name": "@nondanee/unblockneteasemusic",
-  "version": "0.25.3",
+  "name": "unblockneteasemusic-ts",
+  "version": "0.30.0",
   "description": "Revive unavailable songs for Netease Cloud Music",
-  "main": "src/provider/match.js",
+  "main": "dist/main",
   "bin": {
     "unblockneteasemusic": "app.js"
   },
   "scripts": {
     "pkg": "pkg . --out-path=dist/"
   },
-  "pkg": {
-    "assets": [
-      "server.key",
-      "server.crt"
-    ]
-  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/nondanee/UnblockNeteaseMusic.git"
+    "url": "https://github.com/1715173329/UnblockNeteaseMusic.git"
   },
-  "author": "nondanee",
+  "author": "nondanee, CN_SZTL, pan93412",
   "license": "MIT",
-  "dependencies": {},
-  "publishConfig": {
-    "access": "public"
-  }
+  "dependencies": {}
 }
