--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   },
   "author": "nondanee, CN_SZTL, pan93412",
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.6.0",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.6",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.2.4"
+  }
 }
